# agent-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent_bot/: __main__.py  agent.py  approval.py  bot.py  config.py  tools.py
tests/: test_agent.py  test_security_and_auth.py  test_tools.py
